--- a/build.gradle
+++ b/build.gradle
@@ -1,36 +1,33 @@
 buildscript {
-    repositories {
-        jcenter()
+    ext {
+        springBootVersion = '2.0.0.M6'
     }
-
+    repositories {
+        mavenCentral()
+        jcenter()
+        maven { url "https://repo.spring.io/snapshot" }
+		maven { url "https://repo.spring.io/milestone" }
+    }
     dependencies {
-        classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.6.3'
-        classpath 'nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.6'
-        classpath 'org.ajoberstar:gradle-git:1.3.2'
-        classpath 'org.kordamp.gradle:stats-gradle-plugin:0.2.0'
-        classpath 'com.github.ben-manes:gradle-versions-plugin:0.12.0'
-        classpath 'net.nemerosa:versioning:2.1.0'
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
     }
 }
 
 apply plugin: 'idea'
 apply plugin: 'java'
-apply plugin: 'com.github.kt3k.coveralls'
-apply plugin: 'build-dashboard'
-apply plugin: 'org.kordamp.gradle.stats'
-apply plugin: 'com.github.ben-manes.versions'
-apply from: 'gradle/publishing.gradle'
-apply from: 'gradle/code-coverage.gradle'
-apply from: 'gradle/code-quality.gradle'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'application'
+
+sourceCompatibility = 1.8
 
 repositories {
     jcenter()
-}
+    maven { url "https://repo.spring.io/snapshot" }
+	maven { url "https://repo.spring.io/milestone" }}
 
 dependencies {
-    compile "io.reactivex.rxjava2:rxjava:2.1.7"
-    testCompile 'junit:junit:4.12'
+    compile "org.springframework.boot:spring-boot-starter-web"
+    testCompile "org.springframework.boot:spring-boot-starter-test"
 }
 
 task sourcesJar(type: Jar) {
@@ -46,13 +43,8 @@ artifacts {
     sourcesJar
 }
 
-task myRun(type: JavaExec) {
-  classpath sourceSets.main.runtimeClasspath
-  main = "rxjava.examples.HelloWorld"
-}
-
 task wrapper(type: Wrapper) {
-  gradleVersion = '4.0'
+  gradleVersion = '4.2'
 }
 
 gradle.taskGraph.whenReady {
