--- a/build.gradle
+++ b/build.gradle
@@ -18,15 +18,25 @@ apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'application'
 
+run {
+    main = 'rxjava.examples.Application'
+}
+
 sourceCompatibility = 1.8
 
 repositories {
     jcenter()
     maven { url "https://repo.spring.io/snapshot" }
-	maven { url "https://repo.spring.io/milestone" }}
+	maven { url "https://repo.spring.io/milestone" }
+}
+
+configurations.all {
+    exclude group: "commons-logging", module: "commons-logging"
+}
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-logging"
     compile "io.reactivex.rxjava2:rxjava:2.1.6"
     testCompile "org.springframework.boot:spring-boot-starter-test"
     testCompile group: 'junit', name: 'junit', version: '4.12'
