--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     }
 }
 
+
 apply plugin: 'idea'
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
@@ -27,7 +28,10 @@ repositories {
 
 dependencies {
     compile "org.springframework.boot:spring-boot-starter-web"
+    compile "org.springframework.boot:spring-boot-starter-security"
+    compile "org.springframework.boot:spring-boot-starter-actuator"
     compile "io.reactivex.rxjava2:rxjava:2.1.6"
+
     testCompile "org.springframework.boot:spring-boot-starter-test"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
@@ -40,6 +44,7 @@ task sourcesJar(type: Jar) {
 }
 
 jar.finalizedBy sourcesJar
+mainClassName = "rxjava.examples.Application"
 
 artifacts {
     sourcesJar
